--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -15,6 +15,8 @@
 	<meta property="og:image:width" content="1200">
 
   <link rel="stylesheet" href="css/font-awesome.min.css">
+   <link rel="stylesheet" href="css/animate.min.css">
+
   <link rel="icon" type="image/png" sizes="96x96" href="images/fav.png">
 
   <script type="text/javascript" src="js/TweenMax.min.js"></script>
@@ -32,7 +34,7 @@
 
 			<!-- Header (Desktop)
 			––––––––––––––––––––––––––––––-->
-			<div class="header-desktop">
+			<div class="header-desktop hidden">
 				<ul class="header-content flex-header">
 					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
@@ -62,7 +64,7 @@
 
 			<div class="project-header-master">
 				<div class="project-header-image-container">
-					<div class="project-header-image">
+					<div class="project-header-image hidden">
 							<object type="image/svg+xml" data="images/KitsuneAppHeader.svg"> Kitsune App Outline </object>
 					</div>
 				</div>
@@ -71,7 +73,7 @@
 			<div class="highlight-colour-project blue"></div>
 
 			<div class="project-header">
-				<h1 class="project-title">The Kitsune App</h1>
+				<h1 class="project-title hidden">The Kitsune App</h1>
 			</div>
 
 
@@ -114,7 +116,7 @@
 
 			<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img src="images/KitsuneAppMockup3.png" alt="Kitsune App Board Sycing photo">
+					<img src="images/KitsuneAppMockup3.jpg" alt="Kitsune App Board Sycing photo">
 				</div>
 			</div>
 
@@ -173,10 +175,10 @@
 				<div class="pull-tech-color flex-center">
 					<div class="pull-tech-img flex-sb">
 						<div class="image-double">
-							<img src="images/KitsuneAppSketch1.png" alt="Kitsune Board Grip Close Up">
+							<img src="images/KitsuneAppSketch1.jpg" alt="Kitsune Board Grip Close Up">
 						</div>
 						<div class="image-double">
-							<img src="images/KitsuneAppSketch2.png" alt="Kitsune Board Grip Close Up">
+							<img src="images/KitsuneAppSketch2.jpg" alt="Kitsune Board Grip Close Up">
 						</div>
 					</div>
 				</div>
@@ -186,10 +188,10 @@
 				<div class="pull-tech-color flex-center">
 					<div class="pull-tech-img flex-sb">
 						<div class="image-double">
-							<img src="images/KitsuneAppSketch3.png" alt="Kitsune Board Grip Close Up">
+							<img src="images/KitsuneAppSketch3.jpg" alt="Kitsune Board Grip Close Up">
 						</div>
 						<div class="image-double">
-							<img src="images/KitsuneAppSketch4.png" alt="Kitsune Board Grip Close Up">
+							<img src="images/KitsuneAppSketch4.jpg" alt="Kitsune Board Grip Close Up">
 						</div>
 					</div>
 				</div>
@@ -234,7 +236,7 @@
 
 		<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img src="images/KitsuneAppMockup6.png" alt="Kitsune App Smart Watch Mockup">
+					<img src="images/KitsuneAppMockup5.png" alt="Kitsune App Smart Watch Mockup">
 				</div>
 			</div>
 
@@ -307,6 +309,22 @@
 <script src="js/jquery.min.js"></script>
  <script>
 
+window.onload = function() {
+    if (window.jQuery) {
+        // jQuery is loaded
+      $(".header-desktop").removeClass("hidden");
+   		$(".header-desktop").addClass("animated fadeInDown");
+   		$(".project-header-image").removeClass("hidden");
+   		$(".project-header-image").addClass("animated fadeIn");
+   		$(".project-title").removeClass("hidden");
+   		$(".project-title").addClass("animated fadeIn")
+
+    } else {
+        // jQuery is not loaded
+        alert("Doesn't Work");
+    }
+}
+
  			$(document).ready(function() {
   var url = "http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=brockdonaldson&api_key=b88a785049d6bd2a7c92fb9948c72b1b&format=json";
   $.getJSON(url, function(data) {
@@ -322,6 +340,14 @@
 
   });
 });
+
+ 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-93761611-1', 'auto');
+  ga('send', 'pageview');
 
  </script>
 
