--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -8,9 +8,10 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/animate.min.css">
 
   <meta property="og:url" content="http://brockdonaldson.co/kitsuneBoard.html">
-	<meta property="og:title" content="Brock Donaldson; Design Portfolio">
+	<meta property="og:title" content="Brock Donaldson; Kitsune Board">
 	<meta property="og:description" content="A collection of case studies">
 	<meta property="og:image" content="images/facebook.png">
 	<meta property="og:image:width" content="1200">
@@ -29,7 +30,7 @@
 
 			<!-- Header (Desktop)
 			––––––––––––––––––––––––––––––-->
-			<div class="header-desktop">
+			<div class="header-desktop hidden">
 				<ul class="header-content flex-header">
 					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
@@ -59,7 +60,7 @@
 
 			<div class="project-header-master">
 				<div class="project-header-image-container">
-					<div class="project-header-image">
+					<div class="project-header-image hidden">
 							<object type="image/svg+xml" data="images/KitsuneBoardHeader.svg"> Kitsune Board Outline </object>
 					</div>
 				</div>
@@ -68,7 +69,7 @@
 			<div class="highlight-colour-project blue"></div>
 
 			<div class="project-header">
-				<h1 class="project-title">The Kitsune Board</h1>
+				<h1 class="project-title hidden">The Kitsune Board</h1>
 			</div>
 
 
@@ -106,7 +107,7 @@
 
 			<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img id="lazy" src="images/KitsuneboardSpan.png" alt="Kitsune Board Grip Close Up">
+					<img id="lazy" src="images/KitsuneboardSpan.jpg" alt="Kitsune Board Grip Close Up">
 				</div>
 			</div>
 
@@ -192,10 +193,10 @@
 				<div class="pull-tech-color flex-center">
 					<div class="pull-tech-img flex-sb">
 						<div class="image-double">
-							<img src="images/KitsuneBoard2.png" alt="Kitsune Board Grip Close Up">
+							<img src="images/KitsuneBoard2.jpg" alt="Kitsune Board Grip Close Up">
 						</div>
 						<div class="image-double">
-							<img src="images/KitsuneBoard3.png" alt="Kitsune Board Grip Close Up">
+							<img src="images/KitsuneBoard3.jpg" alt="Kitsune Board Grip Close Up">
 						</div>
 					</div>
 				</div>
@@ -302,7 +303,7 @@
 			<div class="footer">
 				<ul class="footer-content flex-sb">
 					<li><h5>Brock Donaldson © 2017</h5></li>
-					<li><h5><em>Despite knowing the journey and where it leads, I embrace it, and I welcome every moment of it.</em></h5></li>
+					<li><h5><em>Do not go gentle into that good night. Rage, rage against the dying of the light.</em></h5></li>
 				</ul>
 			</div>
 		</div>
@@ -316,55 +317,32 @@
 
 	</div>
 
-	<div class="hidden">
-	<script type="text/javascript">
-		<!--//--><![CDATA[//><!--
-			var images = new Array()
-			function preload() {
-				for (i = 0; i < preload.arguments.length; i++) {
-					images[i] = new Image()
-					images[i].src = preload.arguments[i]
-				}
-			}
-			preload(
-							"images/parallax/brock_v1_01.png",
-							"images/parallax/brock_v1_02.png",
-							"images/parallax/brock_v1_03.png",
-							"images/parallax/brock_v1_04.png",
-							"images/parallax/brock_v1_05.png",
-							"images/parallax/brock_v1_06.png",
-							"images/parallax/brock_v1_07.png",
-							"images/parallax/brock_v1_08.png",
-							"images/parallax/brock_v1_09.png",
-							"images/parallax/brock_v1_10.png",
-							"images/parallax/brock_v1_11.png",
-							"images/parallax/brock_v1_12.png",
-							"images/parallax/brock_v1_13.png",
-							"images/parallax/brock_v1_14.png",
-							"images/parallax/brock_v1_15.png",
-							"images/parallax/brock_v1_16.png",
-							"images/parallax/brock_v1_17.png",
-							"images/parallax/brock_v1_18.png",
-							"images/parallax/brock_v1_19.png",
-							"images/parallax/brock_v1_20.png",
-							"images/parallax/brock_v1_21.png",
-							"images/parallax/brock_v1_22.png",
-							"images/parallax/brock_v1_23.png",
-							"images/parallax/brock_v1_24.png",
-							"images/parallax/brock_v1_25.png"
-			)
-		//--><!]]>
-	</script>
+
 </div>
 
-
-  <script type="text/javascript" src="js/TweenMax.min.js"></script>
-	<script type="text/javascript" src="js/ScrollMagic.js"></script>
-	<script type="text/javascript" src="js/animation.gsap.js"></script>
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.lazy.min.js"></script>
+<script type="text/javascript" src="js/TweenMax.min.js"></script>
+<script type="text/javascript" src="js/ScrollMagic.js"></script>
+<script type="text/javascript" src="js/animation.gsap.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.lazy.min.js"></script>
 
  <script>
+
+ window.onload = function() {
+    if (window.jQuery) {
+        // jQuery is loaded
+      $(".header-desktop").removeClass("hidden");
+   		$(".header-desktop").addClass("animated fadeInDown");
+   		$(".project-header-image").removeClass("hidden");
+   		$(".project-header-image").addClass("animated fadeIn");
+   		$(".project-title").removeClass("hidden");
+   		$(".project-title").addClass("animated fadeIn")
+
+    } else {
+        // jQuery is not loaded
+        alert("Doesn't Work");
+    }
+}
 
  	$(document).ready(function() {
   var url = "http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=brockdonaldson&api_key=b88a785049d6bd2a7c92fb9948c72b1b&format=json";
@@ -444,6 +422,14 @@
 						$("form.move input[name=duration]:radio").change(function () {
 							scene.duration($(this).val());
 						});
+
+						(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-93761611-1', 'auto');
+  ga('send', 'pageview');
 
 
 
