--- a/vitaDonationApp.html
+++ b/vitaDonationApp.html
@@ -8,10 +8,11 @@
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/animate.min.css">
 
   <meta property="og:url" content="http://brockdonaldson.co/vitaDonationApp.html">
-	<meta property="og:title" content="Brock Donaldson; Design Portfolio">
-	<meta property="og:description" content="A collection of case studies">
+	<meta property="og:title" content="Brock Donaldson; Kitsune App">
+	<meta property="og:description" content="The Kitsune App is a product that advocates for alternative transportation.">
 	<meta property="og:image" content="images/facebook.png">
 	<meta property="og:image:width" content="1200">
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -29,7 +30,7 @@
 
 			<!-- Header (Desktop)
 			––––––––––––––––––––––––––––––-->
-			<div class="header-desktop">
+			<div class="header-desktop hidden">
 				<ul class="header-content flex-header">
 					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
@@ -59,7 +60,7 @@
 
 			<div class="project-header-master">
 				<div class="project-header-image-container">
-					<div class="project-header-image">
+					<div class="project-header-image hidden">
 							<object type="image/svg+xml" data="images/VitaAppHeader.svg"> Vita App Isometric Drawing </object>
 					</div>
 				</div>
@@ -68,7 +69,7 @@
 			<div class="highlight-colour-project red"></div>
 
 			<div class="project-header">
-				<h1 class="project-title">Vita Donor App</h1>
+				<h1 class="project-title hidden">Vita Donor App</h1>
 			</div>
 
 
@@ -192,6 +193,22 @@
 
  <script>
 
+ window.onload = function() {
+    if (window.jQuery) {
+        // jQuery is loaded
+      $(".header-desktop").removeClass("hidden");
+   		$(".header-desktop").addClass("animated fadeInDown");
+   		$(".project-header-image").removeClass("hidden");
+   		$(".project-header-image").addClass("animated fadeIn");
+   		$(".project-title").removeClass("hidden");
+   		$(".project-title").addClass("animated fadeIn")
+
+    } else {
+        // jQuery is not loaded
+        alert("Doesn't Work");
+    }
+}
+
  	$(document).ready(function() {
   var url = "http://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=brockdonaldson&api_key=b88a785049d6bd2a7c92fb9948c72b1b&format=json";
   $.getJSON(url, function(data) {
@@ -208,6 +225,14 @@
   });
 });
 
+
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-93761611-1', 'auto');
+  ga('send', 'pageview');
 
 
 
