--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 				<div class="about-content">
 
 					<h2> …houston? </h2>
-					<p class="larger-p">I’m a designer, space enthusiast, <!--and an advocate for using design as a practice to improve quality of life.-->and people watcher. </h3>
+					<p class="larger-p">I’m a designer, space enthusiast, and advocate for using design as a practice to improve quality of life. <!--and people watcher. --></h3>
 					<p> I have always been drawn to understanding how people and products interact. Whether that’s myself struggling for the third time that day to pull a push door, or watching my friends decide if a cold brew at 4pm is the right decision, each makes me rethink the potential for better solutions.  </p>
-					<p>I live and work in Toronto, where I have been designing digital experiences at <a href="http://www.konradgroup.com" target="_blank">Konrad Group</a> since my graduation from <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program. I’ve also recently re-entered the world of code and am working on some exciting side projects with my friends through a design collective called <a href="http://smolhax.co" target="_blank"> Smolhax. </a></p>
+					<p>I live and work in Toronto, where I've designing digital experiences at <a href="http://www.konradgroup.com" target="_blank">Konrad Group</a> since my graduation from the <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program. I’ve also recently re-entered the world of code and am working on some exciting side projects with my friends through a design collective called <a href="http://smolhax.co" target="_blank"> Smolhax. </a></p>
 					<p>✌️️ </p>
 					<div class="social-about">
 						<ul class="social-links">
@@ -232,6 +232,8 @@
 
 	</div>
 
+
+
 	<script src="js/jquery.min.js"></script>
  <script>
 
@@ -239,9 +241,9 @@ window.onload = function() {
     if (window.jQuery) {
         // jQuery is loaded
       $(".header-desktop").removeClass("hidden");
-   		$(".header-desktop").addClass("animated fadeIn");
+   		$(".header-desktop").addClass("animated fadeInDown");
    		$(".intro-h2").removeClass("hidden");
-   		$(".intro-h2").addClass("animated fadeIn");
+   		$(".intro-h2").addClass("animated fadeIn")
    		$(".intro-h3").removeClass("hidden");
    		$(".intro-h3").addClass("animated fadeIn")
    		$(".highlight-colour").addClass("extend");
