--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -298,7 +298,9 @@
 				}
 			}
 			preload(
-							"images/KitsuneAppMockup3.png",
+							"images/KitsuneAppMockup3.jpg",
+							"images/KitsuneAppMockup4.png",
+							"images/KitsuneAppMockup5.png",
 			)
 		//--><!]]>
 	</script>
