--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -80,7 +80,7 @@
 			<div class="challenge-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">[CHALLENGE]</h4>
-					<h2> To find an effective and alternative solution to urban transportation through an engaging, user connected product. </h2>
+					<h2> To find an effective and alternative solution to the urban commute & transportation through an engaging, user connected product. </h2>
 				</div>
 			</div>
 
@@ -100,7 +100,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<p>The Kitsune Board is intended to bring forth a change in the way we see commuting. Going from point A to point B needs to become a positive, health concious experience. I investigated how we can create a vehicle representing both social and environmental change, but at the same time allow everyone to enjoy an easier, more environmentally conscious commute.</p>
+					<p>The Kitsune Board is intended to bring forth a change in the way we see commuting. Going from point A to point B needs to become a positive, health conscious experience. I investigated how we can create a vehicle representing both social and environmental change, but at the same time allow everyone to enjoy an easier, more environmentally conscious commute.</p>
 				</div>
 			</div>
 
@@ -325,6 +325,47 @@
 <script type="text/javascript" src="js/animation.gsap.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.lazy.min.js"></script>
+
+<div class="hidden">
+ 	<script type="text/javascript">
+ 		<!--//--><![CDATA[//><!--
+ 			var images = new Array()
+ 			function preload() {
+ 				for (i = 0; i < preload.arguments.length; i++) {
+ 					images[i] = new Image()
+ 					images[i].src = preload.arguments[i]
+				}
+			}
+ 			preload(
+ 							"images/parallax/brock_v1_01.png",
+ 							"images/parallax/brock_v1_02.png",
+ 							"images/parallax/brock_v1_03.png",
+ 							"images/parallax/brock_v1_04.png",
+ 							"images/parallax/brock_v1_05.png",
+ 							"images/parallax/brock_v1_06.png",
+ 							"images/parallax/brock_v1_07.png",
+ 							"images/parallax/brock_v1_08.png",
+ 							"images/parallax/brock_v1_09.png",
+							"images/parallax/brock_v1_10.png",
+							"images/parallax/brock_v1_11.png",
+ 							"images/parallax/brock_v1_12.png",
+ 							"images/parallax/brock_v1_13.png",
+ 							"images/parallax/brock_v1_14.png",
+ 							"images/parallax/brock_v1_15.png",
+ 							"images/parallax/brock_v1_16.png",
+ 							"images/parallax/brock_v1_17.png",
+ 							"images/parallax/brock_v1_18.png",
+ 							"images/parallax/brock_v1_19.png",
+ 							"images/parallax/brock_v1_20.png",
+ 							"images/parallax/brock_v1_21.png",
+ 							"images/parallax/brock_v1_22.png",
+ 							"images/parallax/brock_v1_23.png",
+ 							"images/parallax/brock_v1_24.png",
+							"images/parallax/brock_v1_25.png"
+ 			)
+ 		//--><!]]>
+ 	</script>
+ </div>
 
  <script>
 
