--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -22,7 +22,6 @@
   <script type="text/javascript" src="js/TweenMax.min.js"></script>
 	<script type="text/javascript" src="js/ScrollMagic.js"></script>
 	<script type="text/javascript" src="js/animation.gsap.js"></script>
-	<script type="text/javascript" src="js/debug.addIndicators.js"></script>
 
 </head>
 
@@ -116,7 +115,7 @@
 
 			<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img src="images/KitsuneAppMockup3.jpg" alt="Kitsune App Board Sycing photo">
+					<img src="images/KitsuneAppMockup3b.jpg" alt="Kitsune App Board Sycing photo">
 				</div>
 			</div>
 
@@ -300,7 +299,7 @@
 			preload(
 							"images/KitsuneAppMockup3.jpg",
 							"images/KitsuneAppMockup4.png",
-							"images/KitsuneAppMockup5.png",
+							"images/KitsuneAppMockup5.png"
 			)
 		//--><!]]>
 	</script>
