--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -107,7 +107,7 @@
 
 			<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img id="lazy" src="images/KitsuneboardSpan.jpg" alt="Kitsune Board Grip Close Up">
+					<img id="lazy" src="images/KitsuneboardSpanb.jpg" alt="Kitsune Board Grip Close Up">
 				</div>
 			</div>
 
@@ -361,7 +361,8 @@
  							"images/parallax/brock_v1_22.png",
  							"images/parallax/brock_v1_23.png",
  							"images/parallax/brock_v1_24.png",
-							"images/parallax/brock_v1_25.png"
+							"images/parallax/brock_v1_25.png",
+							"images/parallax/KitsuneboardSpanb.jpg"
  			)
  		//--><!]]>
  	</script>
